Continuing the EDA fixes.

--- a/Mnemosyne.ipynb
+++ b/Mnemosyne.ipynb
@@ -356,13 +356,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 69,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FBTdy4Ta4Y6S",
-        "outputId": "3e9944ca-b786-4a7b-8dbe-079d54f55a20"
+        "outputId": "e93aa0bd-569b-4506-a2e8-c71ad51085a7"
       },
       "outputs": [
         {
@@ -426,13 +426,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 70,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dYGILMcJNBGR",
-        "outputId": "917cfa7e-4673-40f5-c049-e7f184fcbf67"
+        "outputId": "ae54c24c-513a-49c5-d954-6fd8f1790394"
       },
       "outputs": [
         {
@@ -571,7 +571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 71,
       "metadata": {
         "id": "kz_3yOD5IAfM"
       },
@@ -1302,7 +1302,7 @@
       "metadata": {
         "id": "BWtFPZDfv2go"
       },
-      "execution_count": 38,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -1316,7 +1316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 73,
       "metadata": {
         "id": "clkDemShJa_t"
       },
@@ -1381,7 +1381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 74,
       "metadata": {
         "id": "MCVYYMEA4hzJ"
       },
@@ -1452,7 +1452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 75,
       "metadata": {
         "id": "vRqGyyRRmTh9"
       },
@@ -1502,7 +1502,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 76,
       "metadata": {
         "id": "_LuiIAEBm0jI"
       },
@@ -1537,7 +1537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 77,
       "metadata": {
         "id": "UEoq7IHJm_nI"
       },
@@ -1600,7 +1600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 78,
       "metadata": {
         "id": "6d3RPLqmmjS4"
       },
@@ -1930,7 +1930,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 79,
       "metadata": {
         "id": "3UZHlLrFM_w7"
       },
@@ -2390,7 +2390,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 80,
       "metadata": {
         "id": "QsInh4IFyXnl"
       },
@@ -2620,7 +2620,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 81,
       "metadata": {
         "id": "yRVUUVAjunrK"
       },
@@ -2725,7 +2725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 82,
       "metadata": {
         "id": "HrKlx_qve7_c"
       },
@@ -3067,7 +3067,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 83,
       "metadata": {
         "id": "NfgPOjFFhpE-"
       },
@@ -3219,7 +3219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 84,
       "metadata": {
         "id": "jqOvCj8F1r33"
       },
@@ -3616,7 +3616,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 85,
       "metadata": {
         "id": "IVpo7CydwfYp"
       },
@@ -3676,7 +3676,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 86,
       "metadata": {
         "id": "4LMoue7Kwws-"
       },
@@ -3904,7 +3904,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 87,
       "metadata": {
         "id": "jjSLkhrLw7fX"
       },
@@ -4195,7 +4195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 88,
       "metadata": {
         "id": "madKwS2mqoln"
       },
@@ -4435,12 +4435,12 @@
       "metadata": {
         "id": "7An_ndVI-h5I"
       },
-      "execution_count": 55,
+      "execution_count": 89,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 90,
       "metadata": {
         "id": "s-qABwUs2pnA"
       },
@@ -4570,7 +4570,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 91,
       "metadata": {
         "id": "urhKizid3PHj"
       },
@@ -4681,7 +4681,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 92,
       "metadata": {
         "id": "X0wgs70GClve"
       },
@@ -5056,7 +5056,7 @@
       "metadata": {
         "id": "4EM2FmKL51bh"
       },
-      "execution_count": 59,
+      "execution_count": 93,
       "outputs": []
     },
     {
@@ -5139,7 +5139,7 @@
       "metadata": {
         "id": "JfHxzTFQgMML"
       },
-      "execution_count": 60,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -5251,7 +5251,8 @@
         "        for r in sorted(results, key=lambda x: (x['document_type'], x['file_name'])):\n",
         "            self._add_line(r\"\\begin{figure}[h!]\")\n",
         "            self._add_line(r\"  \\centering\")\n",
-        "            self._add_line(r\"  \\includegraphics[width=0.8\\\\textwidth]{\" + self._escape_latex(r['word_cloud_path']) + \"}\")\n",
+        "            # FIX: Removed the `self._escape_latex()` call from the image path\n",
+        "            self._add_line(r\"  \\includegraphics[width=0.8\\textwidth]{\" + r['word_cloud_path'] + \"}\")\n",
         "            self._add_line(r\"  \\caption{Word cloud for \" + self._escape_latex(r['file_name']) + \".}\")\n",
         "            self._add_line(r\"\\end{figure}\")\n",
         "            self._add_line(r\"\\clearpage\")\n",
@@ -5278,7 +5279,7 @@
       "metadata": {
         "id": "N6QXahHZgAGp"
       },
-      "execution_count": 61,
+      "execution_count": 95,
       "outputs": []
     },
     {
@@ -5582,7 +5583,7 @@
       "metadata": {
         "id": "djg0IVctsb4m"
       },
-      "execution_count": 62,
+      "execution_count": 96,
       "outputs": []
     },
     {
@@ -5596,7 +5597,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 97,
       "metadata": {
         "id": "FlJJltyoaxn2"
       },
@@ -5711,7 +5712,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 98,
       "metadata": {
         "id": "Dk64HrKmI1tQ"
       },
@@ -6251,7 +6252,7 @@
       "metadata": {
         "id": "ne592r-4qT8O"
       },
-      "execution_count": 65,
+      "execution_count": 99,
       "outputs": []
     },
     {
@@ -6634,7 +6635,7 @@
       "metadata": {
         "id": "5VnLTXPTkrh7"
       },
-      "execution_count": 66,
+      "execution_count": 100,
       "outputs": []
     },
     {
@@ -6820,7 +6821,7 @@
       "metadata": {
         "id": "ozfjACkyFjxh"
       },
-      "execution_count": 67,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -6835,13 +6836,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 102,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yp7sEX5GT2BE",
-        "outputId": "2b15a093-b6b6-4bd1-fae0-569d53e4d8a4"
+        "outputId": "4fbecfdb-c56d-404d-ac51-7c5214e7cf6a"
       },
       "outputs": [
         {
@@ -6853,7 +6854,7 @@
             "INFO - Neo4j connection closed.\n",
             "INFO - Neo4j connection successful.\n",
             "INFO - --- Starting Experiment Run: 17 groups defined ---\n",
-            "INFO - Run ID: RUN_2025-10-04_15-16-35\n",
+            "INFO - Run ID: RUN_2025-10-04_15-37-42\n",
             "INFO - ==================================================================================================================================\n",
             "INFO - EVALUATING GROUP: Utility: Environment Cleanup (GRP001)\n",
             "INFO - SKIPPING group 'Utility: Environment Cleanup' because 'run_group' is False.\n",
@@ -6863,7 +6864,7 @@
             "INFO - Document initialized for: /content/drive/MyDrive/Mnemosyne/Input/NER Test 1 - Text.docx\n",
             "INFO - Opening document context for NER Test 1 - Text.docx\n",
             "INFO - ▶️ START: Performing EDA for NER Test 1 - Text.docx...\n",
-            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-16-35/figures/appendix_fig/GRP002EXP001_eda_wordcloud.png\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-37-42/figures/appendix_fig/GRP002EXP001_eda_wordcloud.png\n",
             "INFO -   EDA completed for NER Test 1 - Text.docx.\n",
             "INFO - ✅ END: Performing EDA for NER Test 1 - Text.docx.\n",
             "INFO - Closing document context for NER Test 1 - Text.docx\n",
@@ -6871,7 +6872,7 @@
             "INFO - Document initialized for: /content/drive/MyDrive/Mnemosyne/Input/NER Test 2 - Text.docx\n",
             "INFO - Opening document context for NER Test 2 - Text.docx\n",
             "INFO - ▶️ START: Performing EDA for NER Test 2 - Text.docx...\n",
-            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-16-35/figures/appendix_fig/GRP002EXP002_eda_wordcloud.png\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-37-42/figures/appendix_fig/GRP002EXP002_eda_wordcloud.png\n",
             "INFO -   EDA completed for NER Test 2 - Text.docx.\n",
             "INFO - ✅ END: Performing EDA for NER Test 2 - Text.docx.\n",
             "INFO - Closing document context for NER Test 2 - Text.docx\n",
@@ -6879,7 +6880,7 @@
             "INFO - Document initialized for: /content/drive/MyDrive/Mnemosyne/Input/NER Test 3 - Text.docx\n",
             "INFO - Opening document context for NER Test 3 - Text.docx\n",
             "INFO - ▶️ START: Performing EDA for NER Test 3 - Text.docx...\n",
-            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-16-35/figures/appendix_fig/GRP002EXP003_eda_wordcloud.png\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-37-42/figures/appendix_fig/GRP002EXP003_eda_wordcloud.png\n",
             "INFO -   EDA completed for NER Test 3 - Text.docx.\n",
             "INFO - ✅ END: Performing EDA for NER Test 3 - Text.docx.\n",
             "INFO - Closing document context for NER Test 3 - Text.docx\n",
@@ -6887,7 +6888,7 @@
             "INFO - Document initialized for: /content/drive/MyDrive/Mnemosyne/Input/NER Test 4 - Text.docx\n",
             "INFO - Opening document context for NER Test 4 - Text.docx\n",
             "INFO - ▶️ START: Performing EDA for NER Test 4 - Text.docx...\n",
-            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-16-35/figures/appendix_fig/GRP002EXP004_eda_wordcloud.png\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-37-42/figures/appendix_fig/GRP002EXP004_eda_wordcloud.png\n",
             "INFO -   EDA completed for NER Test 4 - Text.docx.\n",
             "INFO - ✅ END: Performing EDA for NER Test 4 - Text.docx.\n",
             "INFO - Closing document context for NER Test 4 - Text.docx\n",
@@ -6895,7 +6896,7 @@
             "INFO - Document initialized for: /content/drive/MyDrive/Mnemosyne/Input/CTSA - Base.docx\n",
             "INFO - Opening document context for CTSA - Base.docx\n",
             "INFO - ▶️ START: Performing EDA for CTSA - Base.docx...\n",
-            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-16-35/figures/appendix_fig/GRP002EXP005_eda_wordcloud.png\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-37-42/figures/appendix_fig/GRP002EXP005_eda_wordcloud.png\n",
             "INFO -   EDA completed for CTSA - Base.docx.\n",
             "INFO - ✅ END: Performing EDA for CTSA - Base.docx.\n",
             "INFO - Closing document context for CTSA - Base.docx\n",
@@ -6903,11 +6904,11 @@
             "INFO - Document initialized for: /content/drive/MyDrive/Mnemosyne/Input/ET - Base.docx\n",
             "INFO - Opening document context for ET - Base.docx\n",
             "INFO - ▶️ START: Performing EDA for ET - Base.docx...\n",
-            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-16-35/figures/appendix_fig/GRP002EXP006_eda_wordcloud.png\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-37-42/figures/appendix_fig/GRP002EXP006_eda_wordcloud.png\n",
             "INFO -   EDA completed for ET - Base.docx.\n",
             "INFO - ✅ END: Performing EDA for ET - Base.docx.\n",
             "INFO - Closing document context for ET - Base.docx\n",
-            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-16-35/GRP002_Utility__Exploratory_Data_Analysis/default_filename.csv\n",
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-37-42/GRP002_Utility__Exploratory_Data_Analysis/default_filename.csv\n",
             "INFO - ==================================================================================================================================\n",
             "INFO - EVALUATING GROUP: Utility: Generate Ground Truth (Test Files) (GRP101)\n",
             "INFO - SKIPPING group 'Utility: Generate Ground Truth (Test Files)' because 'run_group' is False.\n",
@@ -6955,12 +6956,12 @@
             "INFO - SKIPPING group 'Utility: Load and generate reports from prevous run' because 'run_group' is False.\n",
             "INFO - ==================================================================================================================================\n",
             "INFO - ALL EXPERIMENTS COMPLETED\n",
-            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-16-35/00_master_run_summary.csv\n",
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-37-42/00_master_run_summary.csv\n",
             "INFO - ▶️ START: Generating EDA LaTeX Report...\n",
-            "INFO -   Successfully saved EDA LaTeX report to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-16-35/eda_report.tex\n",
+            "INFO -   Successfully saved EDA LaTeX report to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-37-42/eda_report.tex\n",
             "INFO - ✅ END: Generating EDA LaTeX Report.\n",
-            "INFO - Successfully saved LaTeX summary to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-16-35/08_run_summary.tex\n",
-            "INFO - --- Run RUN_2025-10-04_15-16-35 finished ---\n"
+            "INFO - Successfully saved LaTeX summary to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_15-37-42/08_run_summary.tex\n",
+            "INFO - --- Run RUN_2025-10-04_15-37-42 finished ---\n"
           ]
         },
         {
@@ -6970,12 +6971,12 @@
             "\n",
             "--- MASTER EXPERIMENT RUN SUMMARY ---\n",
             "  experiment_id                 experiment_name   status  duration_seconds error\n",
-            "0  GRP002EXP001               EDA on NER Test 1  Success          1.072618      \n",
-            "1  GRP002EXP002               EDA on NER Test 2  Success          1.095041      \n",
-            "2  GRP002EXP003               EDA on NER Test 3  Success          1.072874      \n",
-            "3  GRP002EXP004               EDA on NER Test 4  Success          1.252413      \n",
-            "4  GRP002EXP005      EDA on CTSA Legal Document  Success          7.972639      \n",
-            "5  GRP002EXP006  EDA on Easttown Legal Document  Success         80.311580      \n"
+            "0  GRP002EXP001               EDA on NER Test 1  Success          1.191095      \n",
+            "1  GRP002EXP002               EDA on NER Test 2  Success          1.187353      \n",
+            "2  GRP002EXP003               EDA on NER Test 3  Success          1.147220      \n",
+            "3  GRP002EXP004               EDA on NER Test 4  Success          1.313755      \n",
+            "4  GRP002EXP005      EDA on CTSA Legal Document  Success          7.679401      \n",
+            "5  GRP002EXP006  EDA on Easttown Legal Document  Success         78.749437      \n"
           ]
         }
       ],
