--- a/Mnemosyne.ipynb
+++ b/Mnemosyne.ipynb
@@ -356,13 +356,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 327,
+      "execution_count": 361,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FBTdy4Ta4Y6S",
-        "outputId": "bc08147e-b1c2-4c79-972c-1ba6f57cc615"
+        "outputId": "01a378c1-f8b5-4016-cd1b-296183b5fb61"
       },
       "outputs": [
         {
@@ -426,13 +426,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 328,
+      "execution_count": 362,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dYGILMcJNBGR",
-        "outputId": "e9cb7deb-364a-46a8-e2ee-560f6880202c"
+        "outputId": "202bbd5f-952b-46b7-b97a-edabff598a77"
       },
       "outputs": [
         {
@@ -571,7 +571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 329,
+      "execution_count": 363,
       "metadata": {
         "id": "kz_3yOD5IAfM"
       },
@@ -1302,7 +1302,7 @@
       "metadata": {
         "id": "BWtFPZDfv2go"
       },
-      "execution_count": 330,
+      "execution_count": 364,
       "outputs": []
     },
     {
@@ -1316,7 +1316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 331,
+      "execution_count": 365,
       "metadata": {
         "id": "clkDemShJa_t"
       },
@@ -1381,7 +1381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 332,
+      "execution_count": 366,
       "metadata": {
         "id": "MCVYYMEA4hzJ"
       },
@@ -1452,7 +1452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 333,
+      "execution_count": 367,
       "metadata": {
         "id": "vRqGyyRRmTh9"
       },
@@ -1502,7 +1502,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 334,
+      "execution_count": 368,
       "metadata": {
         "id": "_LuiIAEBm0jI"
       },
@@ -1537,7 +1537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 335,
+      "execution_count": 369,
       "metadata": {
         "id": "UEoq7IHJm_nI"
       },
@@ -1600,7 +1600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 336,
+      "execution_count": 370,
       "metadata": {
         "id": "6d3RPLqmmjS4"
       },
@@ -1930,7 +1930,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 337,
+      "execution_count": 371,
       "metadata": {
         "id": "3UZHlLrFM_w7"
       },
@@ -2390,7 +2390,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 338,
+      "execution_count": 372,
       "metadata": {
         "id": "QsInh4IFyXnl"
       },
@@ -2620,7 +2620,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 339,
+      "execution_count": 373,
       "metadata": {
         "id": "yRVUUVAjunrK"
       },
@@ -2725,7 +2725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 340,
+      "execution_count": 374,
       "metadata": {
         "id": "HrKlx_qve7_c"
       },
@@ -3067,7 +3067,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 341,
+      "execution_count": 375,
       "metadata": {
         "id": "NfgPOjFFhpE-"
       },
@@ -3219,7 +3219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 342,
+      "execution_count": 376,
       "metadata": {
         "id": "jqOvCj8F1r33"
       },
@@ -3616,7 +3616,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 343,
+      "execution_count": 377,
       "metadata": {
         "id": "IVpo7CydwfYp"
       },
@@ -3676,7 +3676,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 344,
+      "execution_count": 378,
       "metadata": {
         "id": "4LMoue7Kwws-"
       },
@@ -3904,7 +3904,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 345,
+      "execution_count": 379,
       "metadata": {
         "id": "jjSLkhrLw7fX"
       },
@@ -4195,7 +4195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 346,
+      "execution_count": 380,
       "metadata": {
         "id": "madKwS2mqoln"
       },
@@ -4435,12 +4435,12 @@
       "metadata": {
         "id": "7An_ndVI-h5I"
       },
-      "execution_count": 347,
+      "execution_count": 381,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 348,
+      "execution_count": 382,
       "metadata": {
         "id": "s-qABwUs2pnA"
       },
@@ -4570,7 +4570,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 349,
+      "execution_count": 383,
       "metadata": {
         "id": "urhKizid3PHj"
       },
@@ -4684,7 +4684,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 350,
+      "execution_count": 384,
       "metadata": {
         "id": "X0wgs70GClve"
       },
@@ -5059,7 +5059,7 @@
       "metadata": {
         "id": "4EM2FmKL51bh"
       },
-      "execution_count": 351,
+      "execution_count": 385,
       "outputs": []
     },
     {
@@ -5161,7 +5161,7 @@
       "metadata": {
         "id": "JfHxzTFQgMML"
       },
-      "execution_count": 352,
+      "execution_count": 386,
       "outputs": []
     },
     {
@@ -5203,7 +5203,7 @@
         "        # Changed from \\section to \\subsection\n",
         "        self._add_line(r\"\\subsection{Corpus Summary}\")\n",
         "        self._add_line(\"The following table provides a high-level summary of the two document corpora: constructed stories and legal texts.\")\n",
-        "        self._add_line(r\"\\begin{table}[h!]\")\n",
+        "        self._add_line(r\"\\begin{table}[!ht]\")\n",
         "        self._add_line(r\"\\centering\")\n",
         "        self._add_line(r\"\\begin{tabular}{lrr}\")\n",
         "        self._add_line(r\"\\toprule\")\n",
@@ -5299,7 +5299,7 @@
         "\n",
         "        for r in sorted(results, key=lambda x: (x['document_type'], x['file_name'])):\n",
         "            # Changed from \\subsection* to \\subsubsection*\n",
-        "            self._add_line(r\"\\subsubsection*{\\\\\" + self._escape_latex(r['file_name']) + \"}\")\n",
+        "            self._add_line(r\"\\subsubsection*{\" + self._escape_latex(r['file_name']) + \"}\")\n",
         "\n",
         "            self._add_line()\n",
         "            self._add_line(self._escape_latex(r.get('description', 'No description available.')))\n",
@@ -5307,7 +5307,7 @@
         "\n",
         "            self._generate_single_doc_stats_table(r)\n",
         "\n",
-        "            self._add_line(r\"\\begin{figure}[h!]\")\n",
+        "            self._add_line(r\"\\begin{figure}[!ht]\")\n",
         "            self._add_line(r\"  \\centering\")\n",
         "            self._add_line(r\"  \\includegraphics[width=\\textwidth]{\" + r['word_cloud_path'] + \"}\")\n",
         "            self._add_line(r\"  \\caption{Word cloud for \" + self._escape_latex(r['file_name']) + \".}\")\n",
@@ -5356,7 +5356,7 @@
       "metadata": {
         "id": "N6QXahHZgAGp"
       },
-      "execution_count": 353,
+      "execution_count": 387,
       "outputs": []
     },
     {
@@ -5660,7 +5660,7 @@
       "metadata": {
         "id": "djg0IVctsb4m"
       },
-      "execution_count": 354,
+      "execution_count": 388,
       "outputs": []
     },
     {
@@ -5674,7 +5674,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 355,
+      "execution_count": 389,
       "metadata": {
         "id": "FlJJltyoaxn2"
       },
@@ -5789,7 +5789,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 356,
+      "execution_count": 390,
       "metadata": {
         "id": "Dk64HrKmI1tQ"
       },
@@ -6337,7 +6337,7 @@
       "metadata": {
         "id": "ne592r-4qT8O"
       },
-      "execution_count": 357,
+      "execution_count": 391,
       "outputs": []
     },
     {
@@ -6720,7 +6720,7 @@
       "metadata": {
         "id": "5VnLTXPTkrh7"
       },
-      "execution_count": 358,
+      "execution_count": 392,
       "outputs": []
     },
     {
@@ -6908,7 +6908,7 @@
       "metadata": {
         "id": "ozfjACkyFjxh"
       },
-      "execution_count": 359,
+      "execution_count": 393,
       "outputs": []
     },
     {
@@ -6923,13 +6923,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 360,
+      "execution_count": 394,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yp7sEX5GT2BE",
-        "outputId": "c5cbc2dd-9b23-4d65-c223-b7226c687cd9"
+        "outputId": "5fb609ed-8bfc-42a3-9808-71c88d575fed"
       },
       "outputs": [
         {
@@ -6941,7 +6941,7 @@
             "INFO - Neo4j connection closed.\n",
             "INFO - Neo4j connection successful.\n",
             "INFO - --- Starting Experiment Run: 17 groups defined ---\n",
-            "INFO - Run ID: RUN_2025-10-04_19-13-50\n",
+            "INFO - Run ID: RUN_2025-10-04_19-35-56\n",
             "INFO - ==================================================================================================================================\n",
             "INFO - EVALUATING GROUP: Utility: Environment Cleanup (GRP001)\n",
             "INFO - SKIPPING group 'Utility: Environment Cleanup' because 'run_group' is False.\n",
@@ -6951,7 +6951,7 @@
             "INFO - Document initialized for: /content/drive/MyDrive/Mnemosyne/Input/NER Test 1 - Text.docx\n",
             "INFO - Opening document context for NER Test 1 - Text.docx\n",
             "INFO - ▶️ START: Performing EDA for NER Test 1 - Text.docx...\n",
-            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-13-50/figures/appendix_fig/GRP002EXP001_eda_wordcloud.png\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-35-56/figures/appendix_fig/GRP002EXP001_eda_wordcloud.png\n",
             "INFO -   EDA completed for NER Test 1 - Text.docx.\n",
             "INFO - ✅ END: Performing EDA for NER Test 1 - Text.docx.\n",
             "INFO - Closing document context for NER Test 1 - Text.docx\n",
@@ -6959,7 +6959,7 @@
             "INFO - Document initialized for: /content/drive/MyDrive/Mnemosyne/Input/NER Test 2 - Text.docx\n",
             "INFO - Opening document context for NER Test 2 - Text.docx\n",
             "INFO - ▶️ START: Performing EDA for NER Test 2 - Text.docx...\n",
-            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-13-50/figures/appendix_fig/GRP002EXP002_eda_wordcloud.png\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-35-56/figures/appendix_fig/GRP002EXP002_eda_wordcloud.png\n",
             "INFO -   EDA completed for NER Test 2 - Text.docx.\n",
             "INFO - ✅ END: Performing EDA for NER Test 2 - Text.docx.\n",
             "INFO - Closing document context for NER Test 2 - Text.docx\n",
@@ -6967,7 +6967,7 @@
             "INFO - Document initialized for: /content/drive/MyDrive/Mnemosyne/Input/NER Test 3 - Text.docx\n",
             "INFO - Opening document context for NER Test 3 - Text.docx\n",
             "INFO - ▶️ START: Performing EDA for NER Test 3 - Text.docx...\n",
-            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-13-50/figures/appendix_fig/GRP002EXP003_eda_wordcloud.png\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-35-56/figures/appendix_fig/GRP002EXP003_eda_wordcloud.png\n",
             "INFO -   EDA completed for NER Test 3 - Text.docx.\n",
             "INFO - ✅ END: Performing EDA for NER Test 3 - Text.docx.\n",
             "INFO - Closing document context for NER Test 3 - Text.docx\n",
@@ -6975,7 +6975,7 @@
             "INFO - Document initialized for: /content/drive/MyDrive/Mnemosyne/Input/NER Test 4 - Text.docx\n",
             "INFO - Opening document context for NER Test 4 - Text.docx\n",
             "INFO - ▶️ START: Performing EDA for NER Test 4 - Text.docx...\n",
-            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-13-50/figures/appendix_fig/GRP002EXP004_eda_wordcloud.png\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-35-56/figures/appendix_fig/GRP002EXP004_eda_wordcloud.png\n",
             "INFO -   EDA completed for NER Test 4 - Text.docx.\n",
             "INFO - ✅ END: Performing EDA for NER Test 4 - Text.docx.\n",
             "INFO - Closing document context for NER Test 4 - Text.docx\n",
@@ -6983,7 +6983,7 @@
             "INFO - Document initialized for: /content/drive/MyDrive/Mnemosyne/Input/CTSA - Base.docx\n",
             "INFO - Opening document context for CTSA - Base.docx\n",
             "INFO - ▶️ START: Performing EDA for CTSA - Base.docx...\n",
-            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-13-50/figures/appendix_fig/GRP002EXP005_eda_wordcloud.png\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-35-56/figures/appendix_fig/GRP002EXP005_eda_wordcloud.png\n",
             "INFO -   EDA completed for CTSA - Base.docx.\n",
             "INFO - ✅ END: Performing EDA for CTSA - Base.docx.\n",
             "INFO - Closing document context for CTSA - Base.docx\n",
@@ -6991,11 +6991,11 @@
             "INFO - Document initialized for: /content/drive/MyDrive/Mnemosyne/Input/ET - Base.docx\n",
             "INFO - Opening document context for ET - Base.docx\n",
             "INFO - ▶️ START: Performing EDA for ET - Base.docx...\n",
-            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-13-50/figures/appendix_fig/GRP002EXP006_eda_wordcloud.png\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-35-56/figures/appendix_fig/GRP002EXP006_eda_wordcloud.png\n",
             "INFO -   EDA completed for ET - Base.docx.\n",
             "INFO - ✅ END: Performing EDA for ET - Base.docx.\n",
             "INFO - Closing document context for ET - Base.docx\n",
-            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-13-50/GRP002_Utility__Exploratory_Data_Analysis/default_filename.csv\n",
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-35-56/GRP002_Utility__Exploratory_Data_Analysis/default_filename.csv\n",
             "INFO - ==================================================================================================================================\n",
             "INFO - EVALUATING GROUP: Utility: Generate Ground Truth (Test Files) (GRP101)\n",
             "INFO - SKIPPING group 'Utility: Generate Ground Truth (Test Files)' because 'run_group' is False.\n",
@@ -7043,12 +7043,12 @@
             "INFO - SKIPPING group 'Utility: Load and generate reports from prevous run' because 'run_group' is False.\n",
             "INFO - ==================================================================================================================================\n",
             "INFO - ALL EXPERIMENTS COMPLETED\n",
-            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-13-50/00_master_run_summary.csv\n",
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-35-56/00_master_run_summary.csv\n",
             "INFO - ▶️ START: Generating EDA LaTeX Report...\n",
-            "INFO -   Successfully saved EDA LaTeX report to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-13-50/eda_report.tex\n",
+            "INFO -   Successfully saved EDA LaTeX report to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-35-56/eda_report.tex\n",
             "INFO - ✅ END: Generating EDA LaTeX Report.\n",
-            "INFO - Successfully saved LaTeX summary to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-13-50/08_run_summary.tex\n",
-            "INFO - --- Run RUN_2025-10-04_19-13-50 finished ---\n"
+            "INFO - Successfully saved LaTeX summary to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-10-04_19-35-56/08_run_summary.tex\n",
+            "INFO - --- Run RUN_2025-10-04_19-35-56 finished ---\n"
           ]
         },
         {
@@ -7058,12 +7058,12 @@
             "\n",
             "--- MASTER EXPERIMENT RUN SUMMARY ---\n",
             "  experiment_id                 experiment_name   status  duration_seconds error\n",
-            "0  GRP002EXP001               EDA on NER Test 1  Success          1.116554      \n",
-            "1  GRP002EXP002               EDA on NER Test 2  Success          1.114388      \n",
-            "2  GRP002EXP003               EDA on NER Test 3  Success          1.107894      \n",
-            "3  GRP002EXP004               EDA on NER Test 4  Success          1.272146      \n",
-            "4  GRP002EXP005      EDA on CTSA Legal Document  Success          8.291361      \n",
-            "5  GRP002EXP006  EDA on Easttown Legal Document  Success         79.976882      \n"
+            "0  GRP002EXP001               EDA on NER Test 1  Success          1.265028      \n",
+            "1  GRP002EXP002               EDA on NER Test 2  Success          1.244983      \n",
+            "2  GRP002EXP003               EDA on NER Test 3  Success          1.220162      \n",
+            "3  GRP002EXP004               EDA on NER Test 4  Success          1.505697      \n",
+            "4  GRP002EXP005      EDA on CTSA Legal Document  Success          8.338553      \n",
+            "5  GRP002EXP006  EDA on Easttown Legal Document  Success         72.946163      \n"
           ]
         }
       ],
